# aoc2022

./: .pre-commit-config.yaml  README.md  pyproject.toml
aoc2022/: __init__.py  __main__.py
aoc2022/cli/: __init__.py  app.py
aoc2022/data/: constants.py
aoc2022/functions/: main.py
aoc2022/functions/aoc10/: aoc10.py  process_input.py  solve_part_1.py  solve_part_2.py
tests/: __init__.py  test_aoc_10.py  test_demo.py
